tests/typechecking/valid/tuple3.ml
let rec f x = 
	let (a,b)= x in 
	x
in let (y,z)= f (1,2) in ()