tests/typechecking/invalid/localVar.ml

let rec f x = 
	let y = 1 in  y  		
in 
let x = y 
	in print_int  1
